[package]
name = "one_round_solver_revised"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.13.0"
round-eliminator-lib = { path = "../round-eliminator-lib/"}
permutator = {git = "https://github.com/olidennis/permutator.git"}
russcip = { version = "0.3.4", features = ["bundled"] }
streaming-iterator = { version = "0.1.5", features = ["std"]}
